// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all markers 1`] = `
Array [
  <Localized
    id="moderate-marker-preMod"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Pre-Mod
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-link"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Link
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-bannedWord"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Banned Word
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-suspectWord"
  >
    <withPropsOnChange(Marker)
      color="error"
      variant="filled"
    >
      Suspect Word
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-spam"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Spam
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-toxic"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Toxic
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-karma"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Karma
    </withPropsOnChange(Marker)>
  </Localized>,
  <withPropsOnChange(Marker)
    color="error"
  >
    <Localized
      id="moderate-marker-offensive"
    >
      <span>
        Offensive
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      2
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>,
  <withPropsOnChange(Marker)
    color="error"
  >
    <Localized
      id="moderate-marker-spam"
    >
      <span>
        Spam
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      3
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>,
]
`;

exports[`renders some markers 1`] = `
Array [
  <Localized
    id="moderate-marker-preMod"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Pre-Mod
    </withPropsOnChange(Marker)>
  </Localized>,
  null,
  <Localized
    id="moderate-marker-bannedWord"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Banned Word
    </withPropsOnChange(Marker)>
  </Localized>,
  null,
  null,
  <Localized
    id="moderate-marker-toxic"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Toxic
    </withPropsOnChange(Marker)>
  </Localized>,
  <Localized
    id="moderate-marker-karma"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Karma
    </withPropsOnChange(Marker)>
  </Localized>,
  <withPropsOnChange(Marker)
    color="error"
  >
    <Localized
      id="moderate-marker-offensive"
    >
      <span>
        Offensive
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      2
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>,
  null,
]
`;
